# ckanext-scientometrics

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/scientometrics/: cli.py  config.py  config_declaration.yaml  const.py  helpers.py  interfaces.py  metrics_extractors.py  plugin.py  utils.py
ckanext/scientometrics/assets/: script.js  webassets.yml
ckanext/scientometrics/logic/: action.py  auth.py  schema.py
ckanext/scientometrics/migration/scientometrics/: env.py
ckanext/scientometrics/templates/user/: edit_user_form.html
ckanext/scientometrics/templates/user/snippets/: google_scholar_card.html  google_scholar_field.html  info.html  openalex_card.html  openalex_field.html  semantic_scholar_card.html  semantic_scholar_field.html
ckanext/scientometrics/tests/: test_plugin.py
